Blatt 8 kompilieren + ReferencesHandler